# Analytiks

./: .gitignore  Analytiks.jucer  CMakeLists.txt  README.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  release.yml
Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
Builds/MacOSX/Analytiks.xcodeproj/: project.pbxproj
Builds/VisualStudio2022/: Analytiks.sln  Analytiks_SharedCode.vcxproj  Analytiks_SharedCode.vcxproj.filters  Analytiks_StandalonePlugin.vcxproj  Analytiks_VST3.vcxproj  Analytiks_VST3ManifestHelper.vcxproj  resources.rc
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: ColourMaps.h  MainPage.cpp  MainPage.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/UI_Comp/: util.h
Source/UI_Comp/Analyser/: Analyser.cpp  Analyser.h
Source/UI_Comp/Correlation/: Correlation.cpp  Correlation.h
Source/UI_Comp/DFT/: DFT.cpp  DFT.h  workerpool.h
Source/UI_Comp/Oscilloscope/: Oscilloscope.cpp  Oscilloscope.h
Source/UI_Comp/Spectrogram/: Spectrogram.cpp  Spectrogram.h
Source/UI_Comp/VolumeMeter/: Volume.cpp
Source/UI_Comp/widgets/: Modernlookandfeel.h  drag_move.h  icon_button.h  seperator_bar_dynamic_labeler.h  seperator_bar_labeler.h  settingsPage.h
Source/ds/: dataStructure.cpp  dataStructure.h
pfft/: fftpack.c  test_pffft.c
